--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/main.ts">
     <title>Vite + TS</title>
   </head>
   <body>
@@ -11,5 +12,17 @@
     <script type="module" src="/src/main.ts">
       
     </script>
+    
+
+    <div id="result"></div>
+  
+    <button onclick="generateRandomNumber()">Generate random number</button>
+    <script>
+      function generateRandomNumber() {
+        var randomNumber = Math.floor(Math.random() * 101); 
+        document.getElementById("result").innerHTML = "Random number: " + randomNumber;
+      }
+    </script>
+  
   </body>
 </html>
