--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button onclick="generateRandomNumber()">Generate random number</button>
     <script>
       function generateRandomNumber() {
-        var randomNumber = Math.floor(Math.random() * 101); 
+        let randomNumber = Math.floor(Math.random() * 101); 
         document.getElementById("result").innerHTML = "Random number: " + randomNumber;
       }
     </script>
