--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/main.ts">
+    <link rel="stylesheet" href="/src/style.css">
     <title>Vite + TS</title>
   </head>
   <body>
@@ -12,6 +12,7 @@
     <script type="module" src="/src/main.ts">
     </script>
   
+
     <div id="result"></div>
     <button onclick="generateRandomNumber()">Generate random number</button>
     <script>
@@ -20,8 +21,11 @@
         document.getElementById("result").innerHTML = "Random number: " + randomNumber;
       }
     </script>
+   
+   
+   
+   
    <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque a recusandae perspiciatis amet, placeat quas natus, dolorum, doloremque veniam ab exercitationem. Dolorum repudiandae nihil fugit inventore animi ab iure nemo?</p>
-
    <button id="toggleButton" onclick="toggleText()">Hide / show text</button>
  
    <script>
@@ -34,5 +38,10 @@
        }
      }
    </script>
+
+<div id="progress-bar"></div>
+<button id="btn-increase">Увеличить заполненность</button>
+
+
   </body>
 </html>
