--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css">
     <title>Vite + TS</title>
+
+    <style>
+      #contents {
+        padding: 5px;
+        border: 1px green solid;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
@@ -43,5 +50,21 @@
 <button id="btn-increase">Увеличить заполненность</button>
 
 
+<fieldset id="contents">
+  <legend>#contents</legend>
+  <p>
+    Как насчёт того, чтобы прочитать <a href="https://wikipedia.org">Википедию</a> или посетить <a href="https://w3.org"><i>W3.org</i></a> и узнать о современных стандартах?
+  </p>
+
+  <script>
+    contents.onclick = function(event){
+      function wikiPedia(href){
+        let leaving = confirm ('Leave for ${href}')
+
+      }
+    }
+
+
+  </script>
   </body>
 </html>
