--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </script>
   
 
-    <div id="result"></div>
-    <button class="tap" onclick="generateRandomNumber()">Generate random number</button>
+  <button class="tap" onclick="generateRandomNumber()">Generate random number</button>
+  <div id="result"></div>
     <script>
       function generateRandomNumber() {
         let randomNumber = Math.floor(Math.random() * 101); 
@@ -25,8 +25,8 @@
    
    
    
-   <p id="text">Lorem ipsum dolor sit amet <br>consectetur adipisicing elit. Atque<br> a recusandae perspiciatis amet,<br> placeat quas natus, dolorum, doloremque <br> veniam ab exercitationem. Dolorum <br> repudiandae nihil fugit inventore animi ab iure nemo?</p>
    <button id="toggleButton" onclick="toggleText()">Hide / show text</button>
+   <p id="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque a recusandae perspiciatis amet, placeat quas natus, dolorum, doloremque  veniam ab exercitationem. Dolorum repudiandae nihil fugit inventore animi ab iure nemo?</p>
  
    <script>
      function toggleText() {
@@ -39,15 +39,17 @@
      }
    </script>
 
+<button id="btn-increase">Add 5 percent</button>
 <div id="first">
 <div id="progress-bar"></div>
 </div>
-<button id="btn-increase">Add 5 percent</button>
+
 
 <div class="like">
   <button class="like_count">&#128077; Like </button>
   <p class="counter"></p>
 </div>
+
 
 
   </body>
