--- a/index.html
+++ b/index.html
@@ -211,5 +211,26 @@
   }
 </script>
 
+<div class="container">
+  <input id="numberInput" type="text" value="10">
+  <button id="nim">-</button>
+  <button id="plus">+</button>
+</div>
+
+<div class="ten">
+<div id="color"></div>
+<button id="block">Add block</button>
+</div>
+
+<div class="bee">
+<div id="color-pallette">
+  <div class="color-box" data-color="#f589ef" style="background-color: #f589ef;"></div>
+  <div class="color-box" data-color="#7c1bbd" style="background-color: #7c1bbd;"></div>
+  <div class="color-box" data-color="#60e8ec" style="background-color: #60e8ec;"></div>
+  <div class="color-box" data-color="#eb6ab5" style="background-color: #eb6ab5;"></div>
+</div>
+<p id="lldf">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea doloribus in quibusdam expedita eos labore minus, excepturi voluptatum perspiciatis incidunt cum doloremque id porro quisquam vitae! Aliquam, atque ut.</p>
+</div>
+
   </body>
 </html>
